# KhoLab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
julia/: README.md
src/kholab/: Kauffman.py  LaurentPolynomial.py  __init__.py  __main__.py  cli.py
tests/: test_basic.py
