[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kholab"
version = "0.1.0"
description = "KhoLab — Python prototype"
readme = "README.md"
requires-python = ">=3.9"
authors = [ { name = "Your Name" } ]

[project.optional-dependencies]
dev = ["pytest"]
